--- a/resume.tex
+++ b/resume.tex
@@ -8,19 +8,19 @@
     \section{\mysidestyle Informations\\Personnelles}
 
     T\'{e}l\'{e}phone: (581) 234-5309     \hfill \noindent Email: laurent.aubin.2@ulaval.ca \\
-    Bilingue (fran\c{c}ais et anglais)
+    Maitrise de la langue fran\c{c}aise et anglaise
     
 
     \section{\mysidestyle \'{E}ducation}
 
-    \textbf{Universit\'{e} Laval}, Qu\'{e}bec, QC \vspace{2mm}\\\vspace{1mm}%
-    \NewEntry{\textsl{Baccalaur\'{e}at en g\'{e}nie logiciel (B. Ing.).} \hfill \textbf{Depuis septembre 2018}}
+    \textbf{Universit\'{e} Laval}, Qu\'{e}bec, QC \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}%
+    \NewEntry{\textsl{Baccalaur\'{e}at en g\'{e}nie logiciel (B. Ing.).}}
     \begin{itemize}[nosep]
         \item Moyenne cumulative : 4,20/4,33
     \end{itemize}
     
-      \textbf{C\'{e}gep de Chicoutimi}, Chicoutimi, QC \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Dipl\^{o}me d'\'{e}tudes coll\'{e}giales en Sciences de la nature} \hfill \textbf{Mai 2018} \\
+      \textbf{C\'{e}gep de Chicoutimi}, Chicoutimi, QC \hfill \textbf{Mai 2018} \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Dipl\^{o}me d'\'{e}tudes coll\'{e}giales en Sciences de la nature} 
   
     
     \section{\mysidestyle Comp\'{e}tences\\Informatiques}
@@ -36,12 +36,14 @@
     \NewEntry{Cours d'Introduction \`{a} la programmation avec Python, Universit\'{e} Laval \hfill \textbf{Automne 2018}}
     \begin{itemize}[nosep]
         \item D\'{e}veloppement d'un programme pouvant g\'{e}rer plusieurs portefeuilles \\d'actions
-        \item Utilisation de classes et de m\'{e}thodes pour implementer plusieurs fonctionnalit\'{e} \\permettant de d\'{e}poser de l'argent, acheter et vendre des actions et projeter la \\valeur des portefeuilles dans le futur
+        \item Utilisation de classes et de m\'{e}thodes pour implementer plusieurs fonctionnalit\'{e} \\
+	      permettant de d\'{e}poser de l'argent, acheter et vendre des actions et projeter la \\
+	      valeur des portefeuilles dans le futur
     \end{itemize} 
     
     \section{\mysidestyle Exp\'{e}rience\\de travail}
-    \textbf{Club de golf de Chicoutimi}, Chicoutimi, QC \vspace{2mm}\\\vspace{1mm}%
-    \NewEntry{\textsl{Pr\'{e}pos\'{e} \`{a} l'arri\`{e}re boutique} \hfill \textbf{Juin 2013 -- Aout 2018}}
+    \textbf{Club de golf de Chicoutimi}, Chicoutimi, QC \hfill \textbf{Juin 2013 -- Aout 2018} \vspace{2mm}\\\vspace{1mm}%
+    \NewEntry{\textsl{Pr\'{e}pos\'{e} \`{a} l'arri\`{e}re boutique} }
     \begin{itemize}[nosep]
         \item Responsable de l'\'{e}quipement des joueurs
         \item Acceuillir la client\`{e}le
@@ -53,13 +55,13 @@
     \section{\mysidestyle M\'{e}rites} 
      \textbf{R\'{e}cipiendaire de la bourse d'admission du d\'{e}partement \\ d'Informatique et de G\'{e}nie Logiciel } 
      \hfill \textbf{Septembre 2018} \vspace{2mm}\\\vspace{1mm}%
-        Pour l'excellence du dossier scolaire
+        Pour l'excellence du dossier scolaire coll\'{e}gial
         
     \section{\mysidestyle Exp\'{e}rience\\Compl\'{e}mentaire}
-    \textbf{Tuteur au Centre d'Aide en Fran\c{c}ais} \hfill \textbf{Automne 2017} \vspace{2mm}\\\vspace{1mm}%
-    C\'{e}gep de Chicoutimi \\ \\
-    \textbf{Membre du conseil d'administration de l'AEGLO} \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}%
+     \textbf{Membre du conseil d'administration de l'AEGLO} \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}%
     Association des \'{E}tudiants en G\'{e}nie Logiciel, Universit\'{e} Laval \\ \\
+   \textbf{Tuteur au Centre d'Aide en Fran\c{c}ais} \hfill \textbf{Automne 2017} \vspace{2mm}\\\vspace{1mm}%
+    C\'{e}gep de Chicoutimi \\ \\
     \textbf{Participation aux Jeux du Qu\'{e}bec} \hfill \textbf{\'{E}t\'{e} 2016} \vspace{2mm}\\\vspace{1mm}%
     \'{E}quipe de volleyball de plage du Saguenay-Lac St-Jean
     
