--- a/resume.tex
+++ b/resume.tex
@@ -43,7 +43,7 @@
     
     \section{\mysidestyle Exp\'{e}rience\\de travail}
     \textbf{Club de golf de Chicoutimi}, Chicoutimi, QC \hfill \textbf{Juin 2013 -- Aout 2018} \vspace{2mm}\\\vspace{1mm}%
-    \NewEntry{\textsl{Pr\'{e}pos\'{e} \`{a} l'arri\`{e}re boutique} }
+    \NewEntry{\textsl{Pr\'{e}pos\'{e} \`{a} l'arri\`{e}re boutique*} }
     \begin{itemize}[nosep]
         \item Responsable de l'\'{e}quipement des joueurs
         \item Acceuillir la client\`{e}le
@@ -60,12 +60,18 @@
     \section{\mysidestyle Exp\'{e}rience\\Compl\'{e}mentaire}
      \textbf{Membre du conseil d'administration de l'AEGLO} \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}%
     Association des \'{E}tudiants en G\'{e}nie Logiciel, Universit\'{e} Laval \\ \\
-   \textbf{Tuteur au Centre d'Aide en Fran\c{c}ais} \hfill \textbf{Automne 2017} \vspace{2mm}\\\vspace{1mm}%
+   \textbf{Tuteur au Centre d'Aide en Fran\c{c}ais*} \hfill \textbf{Automne 2017} \vspace{2mm}\\\vspace{1mm}%
     C\'{e}gep de Chicoutimi \\ \\
     \textbf{Participation aux Jeux du Qu\'{e}bec} \hfill \textbf{\'{E}t\'{e} 2016} \vspace{2mm}\\\vspace{1mm}%
-    \'{E}quipe de volleyball de plage du Saguenay-Lac St-Jean
+    \'{E}quipe de volleyball de plage du Saguenay-Lac St-Jean \\ 
     
     
-    
+
+\end{resume}
+
+
+\name{}
+\begin{resume}
+\hfill *R\'{e}f\'{e}rences sur demande
 \end{resume}
 \end{document}
