--- a/resume.tex
+++ b/resume.tex
@@ -1,77 +1,92 @@
 \documentclass[margin,line]{resume}
 \usepackage[hidelinks]{hyperref}
 \usepackage{enumitem}
+\usepackage[utf8]{inputenc}
 
 \begin{document}
 \name{\Large Laurent Aubin}
 \begin{resume}
     \section{\mysidestyle Informations\\Personnelles}
 
-    T\'{e}l\'{e}phone: (581) 234-5309     \hfill \noindent Email: laurent.aubin.2@ulaval.ca \\
-    Maitrise de la langue fran\c{c}aise et anglaise
+    Téléphone: (581) 234-5309     \hfill \noindent Email: laurent.aubin.2@ulaval.ca \\
+    Maitrise de la langue française et anglaise \hfill \noindent Github: github.com/laurentaubin
+    
 
+    \section{\mysidestyle éducation}
 
-    \section{\mysidestyle \'{E}ducation}
-
-    \textbf{Universit\'{e} Laval}, Qu\'{e}bec, QC \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}%
-    \NewEntry{\textsl{Baccalaur\'{e}at en g\'{e}nie logiciel (B. Ing.).}}
+    \textbf{Université Laval}, Québec, QC \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Baccalauréat en génie logiciel (B. Ing.).}
     \begin{itemize}[nosep]
-        \item Moyenne cumulative : 4,20/4,33
+        \item Moyenne cumulative: 3,52/4,33
     \end{itemize}
-
-      \textbf{C\'{e}gep de Chicoutimi}, Chicoutimi, QC \hfill \textbf{Mai 2018} \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Dipl\^{o}me d'\'{e}tudes coll\'{e}giales en Sciences de la nature}
-
-
-    \section{\mysidestyle Comp\'{e}tences\\Informatiques}
+    
+      \textbf{Cégep de Chicoutimi}, Chicoutimi, QC \hfill \textbf{Mai 2018} \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Diplôme d'études collégiales en Sciences de la nature} 
+  
+    
+    \section{\mysidestyle Compétences\\Informatiques}
      \begin{itemize}[nosep]
-        \item Maitrise des concepts de base de la programmation avec Python
-        \item Compr\'{e}hension des notions de programmation orient\'{e}e objet avec C++ (en cours)
-         \item Connaissance g\'{e}n\'{e}rale des principes de version control avec Git et Mercurial
-        \item Exp\'{e}rience avec l'outil de programmation Visual Basic for Applications
+        \item Compréhension des notions de programmation orientée objet en Python, Java et C++
+        \item Bonne compréhension des principes de contrôle de version avec Git et Mercurial
+        \item Expérience avec l'utilisation des divers modules de Microsft Azure DevOps (Microsoft TFS)
+        \item Base en développement d'application web et en utilisation de Vue.js (en cours)
     \end{itemize}
-
+    
     \section{\mysidestyle Projets}
-    \textbf{Gestionnaire de portefeuilles d'actions} \vspace{2mm}\\\vspace{1mm}%
-    \NewEntry{Cours d'Introduction \`{a} la programmation avec Python, Universit\'{e} Laval \hfill \textbf{Automne 2018}}
+    \textbf{Simulateur de revêtement de plancher} \hfill \textbf{Automne 2019}
+    \vspace{2mm}\\\vspace{1mm}
+    Cours de Génie logiciel orienté objet, Université Laval
+    \begin{itemize}
+        \item Conception et développement d'une application facilitant la pose de
+        \\    revêtement de surface
+        \item Mise en pratique de plusieurs patrons de conception en Java
+        \item Planification et suivi de l'architecture logicielle avec des diagrammes UML
+    \end{itemize}
+    
+    
+    \textbf{Gestionnaire de portefeuilles d'actions} 
+    \vspace{2mm}\\\vspace{1mm}
+    Cours d'Introduction à la programmation avec Python, Université Laval \hfill \textbf{Automne 2018}
     \begin{itemize}[nosep]
-        \item D\'{e}veloppement d'un programme pouvant g\'{e}rer plusieurs portefeuilles \\d'actions
-        \item Utilisation de classes et de m\'{e}thodes pour implementer plusieurs fonctionnalit\'{e}s \\
-	      permettant de d\'{e}poser de l'argent, acheter et vendre des actions et projeter la \\
-	      valeur des portefeuilles dans le futur
+        \item Développement d'un programme pouvant gérer plusieurs portefeuilles 
+        \\    d'actions
+        \item Utilisation de classes et de méthodes pour implémenter plusieurs 
+        \\  fonctionnalités permettant de déposer de l'argent, acheter et vendre 
+        \\  des actions et projeter la valeur des portefeuilles dans le futur
+	    \item Utilisation d'un API Rest public pour obtenir les informations d'un 
+	    \\ symbole bousier
+    \end{itemize} 
+    
+    \section{\mysidestyle Expérience\\de travail}
+    \textbf{AddÉnergie Technologies}, Québec, QC \hfill \textbf{Mai 2019 -- Aout 2019} \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Stagiaire en assurance qualité*}
+    \begin{itemize}[nosep]
+        \item Préparation d'environnements de tests
+        \item Automatisation de tests logiciels
+        \item Travailler de concert avec les autres équipes de développement logiciel
+        \\    et matériel pour monter, exécuter et documenter des essais techniques
+        \item S'assurer de l'entretien du matériel et de la propreté des locaux
     \end{itemize}
 
-    \section{\mysidestyle Exp\'{e}rience\\de travail}
-    \textbf{Club de golf de Chicoutimi}, Chicoutimi, QC \hfill \textbf{Juin 2013 -- Aout 2018} \vspace{2mm}\\\vspace{1mm}%
-    \NewEntry{\textsl{Pr\'{e}pos\'{e} \`{a} l'arri\`{e}re boutique*} }
-    \begin{itemize}[nosep]
-        \item Responsable de l'\'{e}quipement des joueurs
-        \item Acceuillir la client\`{e}le
-        \item Travailler de concert avec les autres employ\'{e}s pour offrir le meilleur \\ service possible aux clients
-        \item S'assurer de l'entretien du mat\'{e}riel et de la propret\'{e} des locaux
-    \end{itemize}
 
-
-    \section{\mysidestyle M\'{e}rites}
-     \textbf{R\'{e}cipiendaire de la bourse d'admission du d\'{e}partement \\ d'Informatique et de G\'{e}nie Logiciel }
-     \hfill \textbf{Septembre 2018} \vspace{2mm}\\\vspace{1mm}%
-        Pour l'excellence du dossier scolaire coll\'{e}gial
-
-    \section{\mysidestyle Exp\'{e}rience\\Autre}
-     \textbf{Membre du conseil d'administration de l'AEGLO} \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}%
-    Association des \'{E}tudiants en G\'{e}nie Logiciel, Universit\'{e} Laval \\ \\
-   \textbf{Tuteur au Centre d'Aide en Fran\c{c}ais*} \hfill \textbf{Automne 2017} \vspace{2mm}\\\vspace{1mm}%
-    C\'{e}gep de Chicoutimi \\ \\
-    \textbf{Participation aux Jeux du Qu\'{e}bec} \hfill \textbf{\'{E}t\'{e} 2016} \vspace{2mm}\\\vspace{1mm}%
-    \'{E}quipe de volleyball de plage du Saguenay-Lac St-Jean \\
-
-
+    \section{\mysidestyle Mérites} 
+     \textbf{Récipiendaire de la bourse d'admission du département
+     \\      d'Informatique et de Génie Logiciel} \hfill \textbf{Septembre 2018}
+     \vspace{2mm}\\\vspace{1mm}
+        Pour l'excellence du dossier scolaire collégial
+        
+    \section{\mysidestyle Expérience\\Autre}
+     \textbf{Membre du conseil d'administration de l'AEGLO} \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}
+    Association des étudiants en Génie Logiciel, Université Laval \\ \\
+   \textbf{Tuteur au Centre d'Aide en Français*} \hfill \textbf{Automne 2017} \vspace{2mm}\\\vspace{1mm}%
+    Cégep de Chicoutimi \\
+    
+    
 
 \end{resume}
 
-
 \name{}
 \begin{resume}
-\hfill *R\'{e}f\'{e}rences sur demande
+\hfill *Références sur demande
 \end{resume}
 \end{document}
