fixed typos and formatting

--- a/resume.tex
+++ b/resume.tex
@@ -10,7 +10,7 @@
 
     Téléphone: (581) 234-5309     \hfill \noindent Email: laurent.aubin.2@ulaval.ca \\
     Maitrise de la langue française et anglaise \hfill \noindent Github: github.com/laurentaubin
-    
+
 
     \section{\mysidestyle éducation}
 
@@ -19,44 +19,44 @@
     \begin{itemize}[nosep]
         \item Moyenne cumulative: 3,52/4,33
     \end{itemize}
-    
+
       \textbf{Cégep de Chicoutimi}, Chicoutimi, QC \hfill \textbf{Mai 2018} \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Diplôme d'études collégiales en Sciences de la nature} 
-  
-    
+    \textsl{Diplôme d'études collégiales en Sciences de la nature}
+
+
     \section{\mysidestyle Compétences\\Informatiques}
      \begin{itemize}[nosep]
-        \item Compréhension des notions de programmation orientée objet en Python, Java et C++
+        \item Maîtrise des notions de programmation orientée objet en Python, Java et C++
         \item Bonne compréhension des principes de contrôle de version avec Git et Mercurial
         \item Expérience avec l'utilisation des divers modules de Microsft Azure DevOps (Microsoft TFS)
         \item Base en développement d'application web et en utilisation de Vue.js (en cours)
     \end{itemize}
-    
+
     \section{\mysidestyle Projets}
     \textbf{Simulateur de revêtement de plancher} \hfill \textbf{Automne 2019}
     \vspace{2mm}\\\vspace{1mm}
     Cours de Génie logiciel orienté objet, Université Laval
-    \begin{itemize}
+    \begin{itemize}[nosep]
         \item Conception et développement d'une application facilitant la pose de
         \\    revêtement de surface
         \item Mise en pratique de plusieurs patrons de conception en Java
         \item Planification et suivi de l'architecture logicielle avec des diagrammes UML
     \end{itemize}
-    
-    
-    \textbf{Gestionnaire de portefeuilles d'actions} 
+
+
+    \textbf{Gestionnaire de portefeuilles d'actions}
     \vspace{2mm}\\\vspace{1mm}
     Cours d'Introduction à la programmation avec Python, Université Laval \hfill \textbf{Automne 2018}
     \begin{itemize}[nosep]
-        \item Développement d'un programme pouvant gérer plusieurs portefeuilles 
+        \item Développement d'un programme pouvant gérer plusieurs portefeuilles
         \\    d'actions
-        \item Utilisation de classes et de méthodes pour implémenter plusieurs 
-        \\  fonctionnalités permettant de déposer de l'argent, acheter et vendre 
+        \item Utilisation de classes et de méthodes pour implémenter plusieurs
+        \\  fonctionnalités permettant de déposer de l'argent, acheter et vendre
         \\  des actions et projeter la valeur des portefeuilles dans le futur
-	    \item Utilisation d'un API Rest public pour obtenir les informations d'un 
+	    \item Utilisation d'un API Rest public pour obtenir les informations d'un
 	    \\ symbole bousier
-    \end{itemize} 
-    
+    \end{itemize}
+
     \section{\mysidestyle Expérience\\de travail}
     \textbf{AddÉnergie Technologies}, Québec, QC \hfill \textbf{Mai 2019 -- Aout 2019} \vspace{2mm}\\\vspace{1mm}%
     \textsl{Stagiaire en assurance qualité*}
@@ -65,23 +65,20 @@
         \item Automatisation de tests logiciels
         \item Travailler de concert avec les autres équipes de développement logiciel
         \\    et matériel pour monter, exécuter et documenter des essais techniques
-        \item S'assurer de l'entretien du matériel et de la propreté des locaux
     \end{itemize}
 
-
-    \section{\mysidestyle Mérites} 
+    \section{\mysidestyle Mérites}
      \textbf{Récipiendaire de la bourse d'admission du département
      \\      d'Informatique et de Génie Logiciel} \hfill \textbf{Septembre 2018}
      \vspace{2mm}\\\vspace{1mm}
         Pour l'excellence du dossier scolaire collégial
-        
-    \section{\mysidestyle Expérience\\Autre}
+
+    \section{\mysidestyle Expériences\\Autres}
      \textbf{Membre du conseil d'administration de l'AEGLO} \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}
     Association des étudiants en Génie Logiciel, Université Laval \\ \\
    \textbf{Tuteur au Centre d'Aide en Français*} \hfill \textbf{Automne 2017} \vspace{2mm}\\\vspace{1mm}%
     Cégep de Chicoutimi \\
-    
-    
+
 
 \end{resume}
 
