Update for winter 2021

--- a/resume.tex
+++ b/resume.tex
@@ -10,53 +10,47 @@
 
     Téléphone: (581) 234-5309     \hfill \noindent Email: laurent.aubin.2@ulaval.ca \\
     Maitrise de la langue française et anglaise \hfill \noindent Github: github.com/laurentaubin
-
+    
 
     \section{\mysidestyle éducation}
 
     \textbf{Université Laval}, Québec, QC \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}%
     \textsl{Baccalauréat en génie logiciel (B. Ing.).}
-    \begin{itemize}[nosep]
-        \item Moyenne cumulative: 3,52/4,33
-    \end{itemize}
-
+    
       \textbf{Cégep de Chicoutimi}, Chicoutimi, QC \hfill \textbf{Mai 2018} \vspace{2mm}\\\vspace{1mm}%
-    \textsl{Diplôme d'études collégiales en Sciences de la nature}
-
-
+    \textsl{Diplôme d'études collégiales en Sciences de la nature} 
+  
+    
     \section{\mysidestyle Compétences\\Informatiques}
      \begin{itemize}[nosep]
-        \item Maîtrise des notions de programmation orientée objet en Python, Java et C++
-        \item Bonne compréhension des principes de contrôle de version avec Git et Mercurial
-        \item Expérience avec l'utilisation des divers modules de Microsft Azure DevOps (Microsoft TFS)
-        \item Base en développement d'application web et en utilisation de Vue.js (en cours)
+        \item Maîtrise des notions de programmation orientée objet en Python, Java
+        \item Bonne compréhension des principes de Clean Code, TDD et SOLID
+        \item Bonne compréhension des principes de contrôle de version et aisance avec Git
+        \item Expérience en développement d'application web et en utilisation de Vue.js et React.js
+        \item Connaissances de base en DevOps et Docker
     \end{itemize}
 
     \section{\mysidestyle Projets}
-    \textbf{Simulateur de revêtement de plancher} \hfill \textbf{Automne 2019}
+    
+    \textbf{Video Traffic Router} 
     \vspace{2mm}\\\vspace{1mm}
-    Cours de Génie logiciel orienté objet, Université Laval
+    Bell Canada \hfill \textbf{Été 2020}
     \begin{itemize}[nosep]
-        \item Conception et développement d'une application facilitant la pose de
-        \\    revêtement de surface
+        \item Développement d'une application permettant de contrôler différents paramètres 
+        \\ de diffusion vidéo de l'application Bell Télé Fibe
+        \item Application full stack en React.js, Java (Jersey et Jetty) et MongoDB
+	    \item Intégration dans un environnement micro-services
+    \end{itemize} 
+    
+    \textbf{Logiciel de gestion de restaurant} \hfill \textbf{Automne 2020}
+    \vspace{2mm}\\\vspace{1mm}
+    Cours de Qualité et métriques du logiciel, Université Laval
+    \begin{itemize}[nosep]
+        \item Conception et développement d'un API REST en Java (Jersey et Jetty) permettant de faire la gestion d'un restaurant (réservations, menu, ingrédients, employés, matériel)
         \item Mise en pratique de plusieurs patrons de conception en Java
-        \item Planification et suivi de l'architecture logicielle avec des diagrammes UML
+        \item Accent mis sur le respect des principes SOLID+T et sur la qualité du code et des tests
     \end{itemize}
-
-
-    \textbf{Gestionnaire de portefeuilles d'actions}
-    \vspace{2mm}\\\vspace{1mm}
-    Cours d'Introduction à la programmation avec Python, Université Laval \hfill \textbf{Automne 2018}
-    \begin{itemize}[nosep]
-        \item Développement d'un programme pouvant gérer plusieurs portefeuilles
-        \\    d'actions
-        \item Utilisation de classes et de méthodes pour implémenter plusieurs
-        \\  fonctionnalités permettant de déposer de l'argent, acheter et vendre
-        \\  des actions et projeter la valeur des portefeuilles dans le futur
-	    \item Utilisation d'un API Rest public pour obtenir les informations d'un
-	    \\ symbole bousier
-    \end{itemize}
-
+    
     \section{\mysidestyle Expérience\\de travail}
     \textbf{AddÉnergie Technologies}, Québec, QC \hfill \textbf{Mai 2019 -- Aout 2019} \vspace{2mm}\\\vspace{1mm}%
     \textsl{Stagiaire en assurance qualité*}
@@ -65,20 +59,27 @@
         \item Automatisation de tests logiciels
         \item Travailler de concert avec les autres équipes de développement logiciel
         \\    et matériel pour monter, exécuter et documenter des essais techniques
-    \end{itemize}
-
-    \section{\mysidestyle Mérites}
+    \end{itemize}  
+    
+    \textbf{Bell Canada}, Québec, QC \hfill \textbf{Mai 2020 -- Aout 2020} \vspace{2mm}\\\vspace{1mm}%
+    \textsl{Stagiaire en développement logiciel*}
+    \begin{itemize}[nosep]
+        \item Mise en place et design complet d'un projet (Video Traffic Router)
+        \item Développement d'un logiciel Java utilisé à l'interne
+        \item Mode de travail Agile (SCRUM)
+        \item Travail conjoint avec différentes équipes de développement et d'opérations
+    \end{itemize}  
+       
+    \section{\mysidestyle Mérites} 
      \textbf{Récipiendaire de la bourse d'admission du département
      \\      d'Informatique et de Génie Logiciel} \hfill \textbf{Septembre 2018}
      \vspace{2mm}\\\vspace{1mm}
         Pour l'excellence du dossier scolaire collégial
-
+ 
     \section{\mysidestyle Expériences\\Autres}
      \textbf{Membre du conseil d'administration de l'AEGLO} \hfill \textbf{Depuis septembre 2018} \vspace{2mm}\\\vspace{1mm}
     Association des étudiants en Génie Logiciel, Université Laval \\ \\
-   \textbf{Tuteur au Centre d'Aide en Français*} \hfill \textbf{Automne 2017} \vspace{2mm}\\\vspace{1mm}%
-    Cégep de Chicoutimi \\
-
+      
 
 \end{resume}
 
